fixed anti-mobile screen not showing up

--- a/style.css
+++ b/style.css
@@ -236,6 +236,6 @@ img {
     }
 
     #logged{
-        display: none;
+        display: none !important;
     }
 }
